// Table Definitions

Table languages {
  language_id int [pk, increment]
  language_code varchar(10) [unique, not null]
  language_name varchar(255) [not null]
}

Table words {
  word_id int [pk, increment]
  language_id int [not null]
  word_text varchar(255) [not null]
  definition text
}

Table crosswords {
  crossword_id int [pk, increment]
  language_id int [not null]
  title varchar(255)
  date_created timestamp [default: `now()`]
  difficulty varchar(50)
}

Table crossword_words {
  crossword_word_id int [pk, increment]
  crossword_id int [not null]
  word_id int [not null]
  clue text [not null]
  row int [not null]
  col int [not null]
  direction char(1) [not null]
  indexes {
    (crossword_id, word_id, row, col, direction) [unique]
  }
}

Table users {
  user_id int [pk, increment]
  username varchar(255) [unique, not null]
  password_hash varchar(255)
  email varchar(255) [unique]
  created_at timestamp [default: `now()`]
  google_id varchar(255) [unique]
}

Table user_crossword_progress {
  user_crossword_progress_id int [pk, increment]
  user_id int [not null]
  crossword_id int [not null]
  grid_state text
  completed boolean [default: false, not null]
  last_attempted timestamp [default: `now()`]
}

Table word_of_the_day {
    word_of_the_day_id int [pk, increment]
    language_id int [not null]
    word_id int [not null]
    date date [not null]
    indexes{
      (language_id, date) [unique]
    }
}

Table topics {
  topic_id int [pk, increment]
  topic_name varchar(255) [unique, not null]
  language_id int [not null]
}

Table crossword_topics {
  crossword_topic_id int [pk, increment]
  crossword_id int [not null]
  topic_id int [not null]
    indexes {
    (crossword_id, topic_id) [unique]
  }
}

Table tenses {
    tense_id int [pk, increment]
    tense_name varchar(255) [not null]
    language_code varchar(10) [not null]
}

Table verbs {
    verb_id int [pk, increment]
    infinitive varchar(255) [unique, not null]
    english_translation varchar(255) [not null]
    language_code varchar(10) [not null]
}

Table conjugations {
    conjugation_id int [pk, increment]
    verb_id int [not null]
    tense_id int [not null]
    grammatical_person varchar(50)
    conjugated_form varchar(255) [not null]
    reflexive boolean [default: false]
    language_code varchar(10) [not null]
}

Table user_verb_progress{
    user_verb_progress_id int [pk, increment]
    user_id int [not null]
    conjugation_id int [not null]
    attempts int [default: 0, not null]
    correct boolean [default: false, not null]
    last_attempted timestamp [default: `now()`]
        indexes {
        (user_id, conjugation_id) [unique]
    }
}

// Relationships (References)

Ref: words.language_id > languages.language_id [delete: cascade]
Ref: crosswords.language_id > languages.language_id [delete: cascade]
Ref: crossword_words.crossword_id > crosswords.crossword_id [delete: cascade]
Ref: crossword_words.word_id > words.word_id [delete: cascade]
Ref: user_crossword_progress.user_id > users.user_id [delete: cascade]
Ref: user_crossword_progress.crossword_id > crosswords.crossword_id [delete: cascade]
Ref: word_of_the_day.language_id > languages.language_id [delete: cascade]
Ref: word_of_the_day.word_id > words.word_id [delete: cascade]
Ref: topics.language_id > languages.language_id [delete: cascade]
Ref: crossword_topics.crossword_id > crosswords.crossword_id [delete: cascade]
Ref: crossword_topics.topic_id > topics.topic_id [delete: cascade]
Ref: verbs.language_code > languages.language_code
Ref: conjugations.verb_id > verbs.verb_id [delete: cascade]
Ref: conjugations.tense_id > tenses.tense_id [delete: cascade]
Ref: tenses.language_code > languages.language_code
Ref: user_verb_progress.user_id > users.user_id [delete: cascade]
Ref: user_verb_progress.conjugation_id > conjugations.conjugation_id [delete: cascade]